Fix map z-index problem

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -54,6 +54,7 @@ body {
   height: 40px;
   width: 50px;
   position: absolute;
+  z-index: 2;
 }
 
 #map-wrapper {
@@ -70,7 +71,6 @@ body {
 
 #map {
   height: 100%;
-  z-index: -99;
 }
 
 #side-box {
